4.1.1 - backport to 1.16.5